# gpp_calculator

./: .gitignore  app.version  build.bat  build_mac.zsh  entitlements.plist  make_icns.zsh  pyproject.toml
scripts/: launch_calculator.py
src/: app_calculator.py  app_rules.py  calculator.py  credit_pool.py  csv_export.py  icon_data.py  lectures.csv  lectures.py  rules.toml  rules_toml.py  test.py
src/gpp_calculator/: app_calculator.py  app_rules.py  calculator.py  cli.py  csv_export.py  lectures.py  rules_toml.py  runtime_path.py
src/gpp_calculator/img/: icon.icns
src/gpp_calculator/input_formatting/: preprocess.py
src/input_formatting/: preprocess.py
